Design- und Inhaltsupdates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li><a href="#one">Über das Objekt</a></li>
             <li><a href="#two">Mögliche Energieversorgungen</a></li>
             <li><a href="#three">Entscheidungshilfen</a></li>
-            <li><a href="#four">Get in touch</a></li>
+            <li><a href="#four">Annahmen</a></li>
           </ul>
         </nav>
       </div>
@@ -39,15 +39,14 @@
       <!-- Intro -->
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
-          <h1>Dekarbonisierung der <br> Nemelkergasse 9</h1>
+          <h1>Dekarbonisierung der <br> Nemelkagasse 9</h1>
           <p>
-            Just another fine responsive site template designed by
-            <a href="http://html5up.net">HTML5 UP</a><br />
-            and released for free under the
-            <a href="http://html5up.net/license">Creative Commons</a>.
+            Die "Dekarbonisierung" ist der Schlüssel im Kampf gegen den Klimawandel, indem sie eine Umstellung von fossilen Energieträgern auf erneuerbare Energien fordert. Das Ziel ist die Reduzierung von klimarelevanten Emissionen wie CO&sup2;, CH&#8308;, N&sup2;O, SF&#8310; und NF&sup3;. Gebäude tragen aktuell zu 40% dieser Emissionen bei. Um den Klimawandel zu bewältigen, sind zehnfache Steigerungen von Dekarbonisierungsprojekten pro Jahr nötig. Angesichts steigender Temperaturen wird die Kühlung von Immobilien, besonders in städtischen Gebieten, ebenfalls entscheidend. Dekarbonisierung muss in den nächsten 10-20 Jahren zur zentralen Bauaufgabe werden, um die gesteckten Ziele zu erreichen.
+          </p>
+          <p>Für Projektentwickler:innen und Planer:innen soll anhand der Liegenschaft Nemelkagasse 9 in 1110 Wien, ein Vergleich alternativer Gebäudesysteme sowie deren zukunftsrelevante Entwicklung in Hinblick auf Kosten und Zeit aufgezeigt werden, die als potentielle Entscheidungshilfe dienen können.
           </p>
           <ul class="actions">
-            <li><a href="#one" class="button scrolly">Learn more</a></li>
+            <li><a href="#one" class="button scrolly">Mehr erfahren</a></li>
           </ul>
         </div>
       </section>
@@ -55,14 +54,18 @@
 	  <!-- One -->
 	  <section id="one" class="wrapper style1-alt">
         <div class="inner">
-			<h2>Die Nemelkergasse 9</h2>
+			<h2>Die Nemelkagasse 9</h2>
 			<iframe id="first_map" width="100%" height="500" title="Inline Frame Example" src="/maps/first_map/index.html"> </iframe>
 			<p>
-			  Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-			  turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-			  lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-			  imperdiet est velit quis lorem.
+			  Die Nemelkagasse 9 beherbergt ein Fabriksgebäude von 1848-1918, das nun als Schule dient. Neben formellen Umbauten wird ein nachhaltiges Heizsystem erwogen, das auf erneuerbaren Energien wie Solarenergie, Biomasse, Geothermie oder Windkraft basiert. Diese Quellen mindern die Abhängigkeit von fossilen Brennstoffen und senken CO&sup2;-Emissionen.
 			</p>
+      <p>Bauperiode: 1848 -1918<br>
+        Nutzfläche: 2.500m&sup2;<br>
+        Zustand: thermisch saniert (Wärmedämmung, Fenstertausch)<br>
+        <br>
+        Energieversorgung:<br>
+        Bestand: Fernwärme
+        </p>
       </section>
 
       <!-- One -->
@@ -75,14 +78,10 @@
             <div class="inner">
               <h2>Luft-Wasser-Wärmepumpe</h2>
               <p>
-                Luft-Wasser-Wärmepumpen entziehen Energie aus der Außenluft.
-                Dabei wird Außenluft angesaugt und am Verdampfer der Wärmepumpe
-                abgekühlt, wobei die thermische Energie der Luft an den
-                Verdampfer übertragen wird. Im Heizbetrieb resultiert dies in
-                einer Abkühlung der Außenluft.
+                Eine Luft-Wasser-Wärmepumpe ist ein thermodynamisches System, das auf dem Prinzip der Wärmepumpentechnologie basiert und dazu dient, Wärmeenergie aus der Umgebungsluft zu entnehmen und in einem Gebäude für Heizzwecke oder die Erwärmung von Warmwasser zu nutzen.
               </p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="luft_wasser_waermepumpe.html" class="button">Mehr erfahren</a></li>
               </ul>
             </div>
           </div>
@@ -95,22 +94,10 @@
             <div class="inner">
               <h2>Sole-Wasser-Wärmepumpe</h2>
               <p>
-                Sole-Wasser-Wärmepumpen nutzen das Erdreich als Wärmespeicher,
-                der ganzjährig verfügbar ist. Ein Solegemisch (Wasser und
-                Wasser-Glycol) zirkuliert durch ein Rohrsystem im Erdreich und
-                nimmt dort Wärmeenergie auf. Während des Heizbetriebs kühlt sich
-                dadurch das Erdreich ab. Das erwärmte Solegemisch wird zur
-                Wärmepumpe transportiert, wo es seine Energie an den Verdampfer
-                abgibt. Der Solekreislauf ist dabei ein geschlossenes System.
-                Die Installation des Solekreislaufs kann in verschiedenen Formen
-                erfolgen, darunter horizontale (wie Flach- und
-                Rindgrabenkollektoren) und vertikale Systeme (wie Erdwärmesonden
-                und aktivierte Energiepfähle). Erdwärmesonden ermöglichen zudem
-                einen "free-cooling"-Betrieb im Sommer zur Gebäudekühlung ohne
-                zusätzliche Kältemaschine.
+                Eine Sole-Wasser-Wärmepumpe zieht Wärmeenergie aus dem Erdreich (Sole) und verwendet sie, um Wasser zu erwärmen. Diese effiziente Technologie dient zur umweltfreundlichen Beheizung von Gebäuden.
               </p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="sole_wasser_waermepumpe.html" class="button">Mehr erfahren</a></li>
               </ul>
             </div>
           </div>
@@ -123,18 +110,26 @@
             <div class="inner">
               <h2>Wasser-Wasser-Wärmepumpe</h2>
               <p>
-                Wasser-Wasser-Wärmepumpen nutzen die thermische Energie des
-                Grundwassers in einem offenen System. Das Grundwasser wird über
-                einen Saugbrunnen zur Wärmepumpe befördert, wo ihm thermische
-                Energie entzogen wird. Diese Energie wird dann an den Verdampfer
-                abgegeben, wobei das Grundwasser abgekühlt wird. Das abgekühlte
-                Wasser wird anschließend über einen Schluckbrunnen ins Erdreich
-                zurückgeleitet. Zusätzlich kann diese Technik im Sommer für eine
-                "free-cooling"-Funktion genutzt werden, um das Gebäude ohne eine
-                separate Kältemaschine zu kühlen.
+                Eine Wasser-Wasser-Wärmepumpe nutzt Grundwasser als Wärmequelle, entzieht ihm Wärme und gibt diese über einen Wärmetauscher an ein Wasserkreislaufsystem zur Heizung von Gebäuden weiter. Diese Technologie ermöglicht eine nachhaltige Beheizung durch die Nutzung des natürlichen Wärmespeichers im Grundwasser.
               </p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="wasser_wasser_waermepumpe.html" class="button">Mehr erfahren</a></li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section>
+          <a href="#" class="image"
+            ><img src="images/pic03.jpg" alt="" data-position="25% 25%"
+          /></a>
+          <div class="content">
+            <div class="inner">
+              <h2>Fernwärme</h2>
+              <p>
+                Fernwärme ist eine zentrale Wärmeversorgung, bei der Heizenergie über isolierte Rohrleitungen von einem Erzeugungsort zu verschiedenen Verbrauchsstellen transportiert wird. Dort wird die Wärme für Heizung und Warmwasser genutzt, bevor das abgekühlte Wasser oder Dampf zurück zum Erzeugungsort gelangt.
+              </p>
+              <ul class="actions">
+                <li><a href="fernwaerme.html" class="button">Mehr erfahren</a></li>
               </ul>
             </div>
           </div>
@@ -146,17 +141,14 @@
         <div class="inner">
           <h2>Kostenentwicklung</h2>
           <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
+            Die vorgeschlagenen Heizsysteme werden über einen Zeitraum von 30 Jahren im Hinblick auf ihre Kosten miteinander verglichen. Dieser langfristige Vergleich ermöglicht es, nicht nur die Anschaffungskosten, sondern auch die Betriebskosten zu berücksichtigen. Dabei werden mögliche Veränderungen in den Energiepreisen sowie technologische Entwicklungen in Betracht gezogen.
           </p>
-          <div id="ggb-element"></div>
+          <div id="ggb-element1"></div>
           <script>
             var params = {
               appName: "classic",
               autoHeight: true,
-              borderColor: "#b74e91",
+              borderColor: "#92A2D6",
               showResetIcon: true,
               enableLabelDrags: false,
               enableShiftDragZoom: false,
@@ -164,44 +156,51 @@
               perspective: "G",
               material_id: "j4stkc5m",
             };
-            var ggbApplet = new GGBApplet(params, true);
+            var ggbApplet1 = new GGBApplet(params, true);
             window.addEventListener("load", function () {
-              ggbApplet.inject("ggb-element");
+              ggbApplet1.inject("ggb-element1");
             });
           </script>
-          <p>Stromkosten in kWh/€</p>
+          <h2>CO&sup2; Äquivalente</h2>
+          <p>enflk</p>
+          <div id="ggb-element2"></div>
+          <script>
+            var params = {
+              appName: "classic",
+              autoHeight: true,
+              borderColor: "#92A2D6",
+              showResetIcon: true,
+              enableLabelDrags: false,
+              enableShiftDragZoom: false,
+              useBrowserForJS: false,
+              perspective: "G",
+              material_id: "d47csuek",
+            };
+            var ggbApplet2 = new GGBApplet(params, true);
+            window.addEventListener("load", function () {
+              ggbApplet2.inject("ggb-element2");
+            });
+          </script>
           <div class="features">
             <section>
-              <span class="icon solid major fa-code"></span>
-              <h3>Lorem ipsum amet</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
+              <span class="icon solid major fa-money-bill"></span>
+              <h3>Kosten</h3>
+              <p>Bei den Anschaffungskosten zeigt sich, dass die Sole-Wasserwärmepumpe den höchsten Preis aufweist, während die Luft-Wasser-Wärmepumpe sich als kostengünstigere Alternative präsentiert.</p>
             </section>
             <section>
-              <span class="icon solid major fa-lock"></span>
-              <h3>Aliquam sed nullam</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
+              <span class="icon solid major fa-seedling"></span>
+              <h3>Energieeffizienz</h3>
+              <p>Die Temperaturen im Boden bleiben das gesamte Jahr über vergleichsweise stabil, was zu einer konstant hohen Energieeffizienz von Erdwärmepumpen führt.</p>
             </section>
             <section>
-              <span class="icon solid major fa-cog"></span>
-              <h3>Sed erat ullam corper</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
+              <span class="icon solid major fa-hourglass-half"></span>
+              <h3>Lebensdauer</h3>
+              <p>Die Lebensdauer einer Sole-Wasser-Wärmepumpe liegt in der Regel zwischen 20 und 25 Jahren, wobei die Lebensdauer der Erdsonden sogar 50 bis 100 Jahre betragen kann.</p>
             </section>
             <section>
-              <span class="icon solid major fa-desktop"></span>
-              <h3>Veroeros quis lorem</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
+              <span class="icon solid major fa-wrench"></span>
+              <h3>Installationsaufwand</h3>
+              <p>Die Sole-Wasser-Wärmepumpe ist aufgrund der aufwendigen Bohrungen der Erdsonden arbeitsintensiv, wobei der Aufwand von der benötigten Sondenlänge abhängt. Im Gegensatz dazu ist die Installation von Luftwärmepumpen unkompliziert, da keine Erdarbeiten oder behördlichen Genehmigungen erforderlich sind.</p>
             </section>
             <section>
               <span class="icon solid major fa-link"></span>
@@ -221,7 +220,7 @@
             </section>
           </div>
           <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
+            <li><a href="generic.html" class="button">Mehr erfahren</a></li>
           </ul>
         </div>
       </section>
@@ -229,86 +228,13 @@
       <!-- Three -->
       <section id="four" class="wrapper style1 fade-up">
         <div class="inner">
-          <h2>Get in touch</h2>
+          <h2>Annahmen</h2>
           <p>
             Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
             turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
             lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
             imperdiet est velit quis lorem.
           </p>
-          <div class="split style1">
-            <section>
-              <form method="post" action="#">
-                <div class="fields">
-                  <div class="field half">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
-                  </div>
-                  <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="text" name="email" id="email" />
-                  </div>
-                  <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="5"></textarea>
-                  </div>
-                </div>
-                <ul class="actions">
-                  <li><a href="" class="button submit">Send Message</a></li>
-                </ul>
-              </form>
-            </section>
-            <section>
-              <ul class="contact">
-                <li>
-                  <h3>Address</h3>
-                  <span
-                    >12345 Somewhere Road #654<br />
-                    Nashville, TN 00000-0000<br />
-                    USA</span
-                  >
-                </li>
-                <li>
-                  <h3>Email</h3>
-                  <a href="#">user@untitled.tld</a>
-                </li>
-                <li>
-                  <h3>Phone</h3>
-                  <span>(000) 000-0000</span>
-                </li>
-                <li>
-                  <h3>Social</h3>
-                  <ul class="icons">
-                    <li>
-                      <a href="#" class="icon brands fa-twitter"
-                        ><span class="label">Twitter</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-facebook-f"
-                        ><span class="label">Facebook</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-github"
-                        ><span class="label">GitHub</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-instagram"
-                        ><span class="label">Instagram</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-linkedin-in"
-                        ><span class="label">LinkedIn</span></a
-                      >
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </section>
-          </div>
         </div>
       </section>
     </div>
