--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	  <section id="one" class="wrapper style1-alt">
         <div class="inner">
 			<h2>Die Nemelkagasse 9</h2>
-			<iframe id="first_map" width="100%" height="500" title="Inline Frame Example" src="/maps/first_map/index.html"> </iframe>
+			<iframe id="first_map" width="100%" height="500" title="Inline Frame Example" src="/maps/second_map/index.html"> </iframe>
 			<p>
 			  Die Nemelkagasse 9 beherbergt ein Fabriksgebäude von 1848-1918, das nun als Schule dient. Neben formellen Umbauten wird ein nachhaltiges Heizsystem erwogen, das auf erneuerbaren Energien wie Solarenergie, Biomasse, Geothermie oder Windkraft basiert. Diese Quellen mindern die Abhängigkeit von fossilen Brennstoffen und senken CO&sup2;-Emissionen.
 			</p>
