pictures and readme

--- a/luft_wasser_waermepumpe.html
+++ b/luft_wasser_waermepumpe.html
@@ -31,7 +31,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Luft-Wasser-Wärmepumpe</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/header_luft_wasser.png" alt="" /></span>
 							<p>Mithilfe einer Luftwärmepumpe, auch als Luft/Wasser-Wärmepumpe bezeichnet, nutzen Sie die vorhandene Wärmeenergie aus der Umgebungsluft, die täglich von der Sonne erwärmt wird. Diese Technologie ermöglicht eine effiziente Beheizung und Warmwasserversorgung Ihres Zuhauses, selbst bei Minustemperaturen.</p>
 							<p>Die Funktionsweise ist unkompliziert: Ein Ventilator saugt die Außenluft an, führt sie zu einem Wärmetauscher, wo ein Kältemittel Wärme entzieht und sich dabei erhitzt. Ein strombetriebener Kompressor erhöht den Druck, sodass das Kältemittel die Wärme an die Heizung abgibt. Selbst bei -20 °C bleibt die Wärmeversorgung gewährleistet, und bei extrem kalten Tagen schaltet sich ein elektrischer Heizstab automatisch hinzu. In Regionen mit langen, kalten Wintern könnte jedoch eine Erd- oder Wasserwärmepumpe wirtschaftlicher sein, da die Jahresarbeitszahl der Luftwärmepumpe dort tendenziell niedriger ist.</p>
 						</div>
