--- a/sole_wasser_waermepumpe.html
+++ b/sole_wasser_waermepumpe.html
@@ -31,7 +31,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Sole-Wasser-Wärmepumpe</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/header_sole_wasser.png" alt="" /></span>
 							<p>Erdwärmepumpen, auch als Sole/Wasser-Wärmepumpen bekannt, nutzen die im Erdreich gespeicherte Wärme als Energiequelle, die durch die Sonne und die Erdwärme kontinuierlich aufgeheizt wird. Diese Wärme wird effizient gespeichert. Die Funktionsweise sieht vor, dass eine frostsichere Soleflüssigkeit in einem Rohrleitungssystem, das mit der Erdwärmepumpe verbunden ist, die Wärme aus dem Boden aufnimmt. Diese Sole überträgt die Wärmeenergie auf ein Kältemittel, das verdampft und durch Kompression verdichtet wird, um die Temperatur zu erhöhen. Die gewonnene Energie wird dann an das Heizsystem übertragen. Das abgekühlte Kältemittel wird flüssig und kann erneut Wärme aus dem Erdreich aufnehmen.</p>
 							<p>Die Bezeichnung "Sole" kommt daher, dass früher Salze beigemischt wurden, um die Soleflüssigkeit frostsicher zu machen. Heute werden vorwiegend Alkohole der Glykol-Familie verwendet.</p>
 							<p>Erdwärmepumpen werden im Haus aufgestellt, und ein Rohrleitungssystem unter der Erde ermöglicht die Nutzung der Wärmeenergie aus dem Boden. Es gibt drei Optionen für die Wärmegewinnung: Erdkollektoren, Erdwärmekörbe und Erdsonden. Die Wahl hängt von Ihrem Grundstück und der Geologie des Bodens ab.</p>
