--- a/wasser_wasser_waermepumpe.html
+++ b/wasser_wasser_waermepumpe.html
@@ -31,7 +31,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Wasser-Wasser-Wärmepumpe</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/header_wasser_wasser.png" alt="" /></span>
 							<p>Die konstante Erwärmung unseres Grundwassers durch den Erdkern, mit Temperaturen zwischen 8 und 12 °C, bietet eine ideale Wärmequelle für Wasser/Wasser-Wärmepumpen, auch als Wasserwärmepumpen bekannt. Diese Pumpen ermöglichen die effiziente Beheizung großer Gebäude durch ganzjährig stabile Temperaturen. Zwei Brunnenbohrungen sind erforderlich, um das Grundwasser nach oben zu pumpen, und die Wärmeenergie wird dem Wasser einfach über einen Wärmetauscher entnommen.</p>
 							<p>Es gibt jedoch bestimmte Voraussetzungen für das Fördern von Grundwasser, einschließlich einer Genehmigung der zuständigen Wasserbehörde und der Überprüfung der hydrochemischen Eigenschaften des Grundwassers, um Betriebsstörungen zu vermeiden. Die Platzierung der Brunnen muss ebenfalls sorgfältig erfolgen, um eine effiziente Nutzung der Wärmequelle sicherzustellen. Wasserwärmepumpen werden platzsparend innen aufgestellt, zum Beispiel im Keller. Eine Pumpe transportiert das Grundwasser aus dem Förderbrunnen zur Wärmepumpe, wo es über einen Wärmetauscher Wärme entzieht und an das Heizsystem abgibt. Das abgekühlte Grundwasser wird über einen Schluckbrunnen zurück ins Erdreich geleitet, wobei auf die Fließrichtung des Grundwassers und den Abstand zum Förderbrunnen geachtet werden muss, um die Effizienz der Wärmepumpe nicht zu beeinträchtigen.</p>
 						</div>
