--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section id="two" class="wrapper style2 spotlights">
         <section>
           <a href="#" class="image"
-            ><img src="images/pic03.jpg" alt="" data-position="25% 25%"
+            ><img src="images/fernwaerme.png" alt="" data-position="center center"
           /></a>
           <div class="content">
             <div class="inner">
@@ -88,7 +88,7 @@
         </section>
         <section>
           <a href="#" class="image"
-            ><img src="images/pic01.jpg" alt="" data-position="center center"
+            ><img src="images/luft_wasser.png" alt="" data-position="center center"
           /></a>
           <div class="content">
             <div class="inner">
@@ -104,7 +104,7 @@
         </section>
         <section>
           <a href="#" class="image"
-            ><img src="images/pic02.jpg" alt="" data-position="top center"
+            ><img src="images/sole_wasser.png" alt="" data-position="center center"
           /></a>
           <div class="content">
             <div class="inner">
@@ -120,7 +120,7 @@
         </section>
         <section>
           <a href="#" class="image"
-            ><img src="images/pic03.jpg" alt="" data-position="25% 25%"
+            ><img src="images/wasser_wasser.png" alt="" data-position="center center"
           /></a>
           <div class="content">
             <div class="inner">
